--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gts clean",
     "compile": "tsc",
     "fix": "gts fix",
+    "dev": "nodemon src/index.ts",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
     "posttest": "npm run lint"
@@ -24,6 +25,8 @@
     "@types/figlet": "^1.5.5",
     "@types/node": "^14.11.2",
     "gts": "^3.1.1",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
     "typescript": "~4.7.0"
   },
   "dependencies": {
